--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ye-butenko.github.io/goit-react-hw-03-phonebook/",
+  "homepage": "https://ye-butenko.github.io/goit-react-hw-03-image-finder/",
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "basiclightbox": "^5.0.4",
     "formik": "^2.4.5",
     "nanoid": "^5.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-portal": "^4.2.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.67.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.3"
